crates/swc-optimizer/core/src/snapshots/qwik_core__test__special_jsx.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
// don't transpile jsx with non-plain-object props
import { jsx } from "@qwik.dev/core";

export const App = () => {
  const props = {};
  return jsx("div", props, "Hello Qwik");
};

=== test.tsx ===
// don't transpile jsx with non-plain-object props
import { jsx } from "@qwik.dev/core";
export const App = () => {
  const props = {};
  return jsx("div", props, "Hello Qwik");
};

=== DIAGNOSTICS ===

[]
