crates/swc-optimizer/core/src/snapshots/qwik_core__test__transform_qrl_in_regular_prop.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, $ } from "@qwik.dev/core";
export const Cmp = component$(() => <Cmp foo={$(() => console.log("hi there"))}>Hello Qwik</Cmp>);

=== test.ts ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Cmp_component_XXXXXXXXXXXX");
export const Cmp = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Cmp_component_XXXXXXXXXXXX"),
);

=== test.tsx_Cmp_component_XXXXXXXXXXXX.ts === (ENTRY)
import { Cmp } from "./test";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Cmp_component_Cmp_foo_XXXXXXXXXXXX");
export const Cmp_component_XXXXXXXXXXXX = () =>
  /* @__PURE__ */ _jsxSorted(
    Cmp,
    {
      foo: /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Cmp_component_Cmp_foo_XXXXXXXXXXXX"),
    },
    null,
    "Hello Qwik",
    3,
    "u6_0",
  );

/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Cmp_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Cmp_component_Cmp_foo_XXXXXXXXXXXX.ts === (ENTRY)
export const Cmp_component_Cmp_foo_XXXXXXXXXXXX = () => console.log("hi there");

/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_Cmp_foo_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Cmp_component_Cmp_foo",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Cmp_component_Cmp_foo_XXXXXXXXXXXX",
  "path": "",
  "extension": "ts",
  "parent": "Cmp_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
